--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,16 @@ boto3==1.9.116
 botocore==1.12.116
 certifi==2018.8.24
 chardet==3.0.4
+Click==7.0
 cymem==2.0.2
 docutils==0.14
+Flask==1.0.2
 idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10
 jmespath==0.9.4
 jsonschema==2.6.0
+MarkupSafe==1.1.1
 murmurhash==1.0.2
 numpy==1.16.2
 plac==0.9.6
@@ -24,5 +29,7 @@ thinc==7.0.3
 thinc-gpu-ops==0.0.4
 torch==1.0.1.post2
 tqdm==4.31.1
-urllib3>=1.24.2
+urllib3==1.25.2
 wasabi==0.1.3
+websockets==7.0
+Werkzeug==0.14.1
