--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 blis==0.2.4
-boto3==1.9.116
-botocore==1.12.116
-certifi==2018.8.24
-chardet==3.0.4
+boto3
+botocore
 cymem==2.0.2
 docutils==0.14
 idna==2.8
@@ -18,11 +16,9 @@ regex==2019.3.12
 requests==2.21.0
 s3transfer==0.2.0
 six==1.12.0
-spacy==2.1.0
 srsly==0.0.5
 thinc==7.0.3
 thinc-gpu-ops==0.0.4
 torch==1.0.1.post2
 tqdm==4.31.1
-urllib3>=1.24.2
-wasabi==0.1.3
+urllib3
