--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 blis==0.2.4
-boto3
-botocore
 cymem==2.0.2
 docutils==0.14
+Flask==1.0.2
 idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10
 jmespath==0.9.4
 jsonschema==2.6.0
+MarkupSafe==1.1.1
 murmurhash==1.0.2
 numpy==1.16.2
 plac==0.9.6
@@ -22,3 +24,4 @@ thinc-gpu-ops==0.0.4
 torch==1.0.1.post2
 tqdm==4.31.1
 urllib3
+Werkzeug==0.14.1
