--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ jmespath==0.9.4
 jsonschema==2.6.0
 MarkupSafe==1.1.1
 murmurhash==1.0.2
-numpy==1.16.2
+numpy
 plac==0.9.6
 preshed==2.0.1
 python-dateutil==2.8.0
@@ -22,7 +22,7 @@ six==1.12.0
 srsly==0.0.5
 thinc==7.0.3
 thinc-gpu-ops==0.0.4
-torch==1.0.1.post2
+torch
 tqdm==4.31.1
 urllib3
 Werkzeug==0.14.1
