--- a/app.yaml
+++ b/app.yaml
@@ -10,6 +10,7 @@ health_check:
 handlers:
 - url: /static
   static_dir: static
+  expiration: '10s'
 # liveness_check:
 #   path: "/liveness_check"
 # readiness_check:
