--- a/app.yaml
+++ b/app.yaml
@@ -2,7 +2,8 @@ runtime: custom
 env: flex
 resources:
   cpu: 2
-  memory_gb: 6
+  memory_gb: 10
+  disk_size_gb: 20
 #network:
 #  session_affinity: true
 health_check:
